# WidgetArea

./: CMakeLists.txt  cardlist.cpp  cardlist.h  cardwidget.cpp  cardwidget.h  listwidget.cpp  listwidget.h  listwidgetitem.cpp  listwidgetitem.h  main.cpp  usermodelrole.h  widgetmodel.cpp  widgetmodel.h
lib/: CMakeLists.txt  listwidget.cpp  listwidget.h
src/: cardlist.cpp  cardlist.h  cardwidget.cpp  listwidgetitem.h  main.cpp  usermodelrole.h  widgetmodel.h  widgettype.h
